diesel_compile_tests/tests/compile-fail/table_invalid_syntax_3.rs
#[macro_use] extern crate diesel;

table! {
     #[foobar]
     //~^ ERROR expected ident, found #
     posts {
         id -> Integer,
     }
}

fn main() {}
